--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 			<version>5.5.0</version>
 		</dependency>
 		
+		<!-- Swagger OpenAPI 3.0 依赖 -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
